# mimyo

./: README.md  gitignore  main.py  pyproject.toml
mimyo/: __init__.py  __main__.py  app.py  config.py  deps.py  player.py  theme.css  theme_catppuccin_mocha.css  theme_kanagawa_wave.css  theme_rose_pine.css  track.py  utils.py
mimyo/rendering/: art.py  sixel_win.py
mimyo/widgets/: bars.py  keybinds.py  queue.py  quit_modal.py  youtube.py
