[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mimyo"
version = "0.4.0"
description = "A terminal-based music player"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Isht4ros" }
]
keywords = ["music", "player", "terminal", "tui", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

dependencies = [
    "textual>=0.50.0",
    "pygame-ce>=2.4.0",
    "mutagen>=1.47.0",
    "Pillow>=10.0.0",
    "yt-dlp>=2024.1.0",
    "sixel>=0.2.0",
]

[project.optional-dependencies]
discord = ["pypresence"]

[project.scripts]
mimyo = "mimyo.app:main"

[project.urls]
Homepage = "https://github.com/Isht4ros"

[tool.setuptools]
packages = ["mimyo", "mimyo.rendering", "mimyo.widgets"]

[tool.setuptools.package-data]
mimyo = ["theme.css"]
